# rulefinder

./: CMakeLists.txt  README.md
include/: analysisStrategy.h  boolEval.h  rule.h  ruleBasedLogAnalysis.h
src/: CMakeLists.txt  boolEval.cpp  compositeRuleAnalysis.cpp  main.cpp  oneshotRuleAnalysis.cpp
test/: CMakeLists.txt  Makefile
test/include/: driver.h  stub.h  testHelper.h
test/res/: res_1.txt  res_2.txt
test/src/: BoolExprTestHelper.cpp  CompositRuleTestHelper.cpp  OneshotRuleTestHelper.cpp  testmain.cpp
